--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,14 @@ android {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-
     // rooms
     def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    // android-gif-drawable
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
 
     // Coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
